global refactor of code